--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,16 @@
   text-align: left;
 }
 
+.sketch{
+  height: 100% !important;
+  width: 100%;
+  position: absolute;
+}
+
+.sketch .canvas-container{
+  height: 100% !important;
+}
+
 
 
 
